Fix DocumentParser.java